fixed minor bugs with overflow wrapping and authors/votes not showing

--- a/public/style.css
+++ b/public/style.css
@@ -245,6 +245,7 @@ body {
   border-radius: 25px;
   background-color: #226d77;
   margin: 0px 0px 10px;
+  overflow-wrap: anywhere;
 }
 
 .box-width {
@@ -331,8 +332,7 @@ body {
   .box {
     width: 350px;
   }
-  .navbar-text{
+  .navbar-text {
     display: none;
   }
-
 }
